--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -27,6 +27,14 @@
         path: /var/run/reboot-required
       register: reboot_required_file
       
-    - name: Reboot if required
-      reboot:
+    - name: Sending an e-mail if reboot needed
       when: reboot_required_file.stat.exists == true
+      mail:
+        host: {{ var_gmail_smtp_server }}
+        port: {{ var_gmail_smtp_port }}
+        username: {{ var_gmail_sender }}
+        password: {{ var_gmail_password }}
+        to: {{ var_gmail_receiver }}
+        subject: Server Reboot requited - Ansible 
+        body: Reboot requied for systems {{ ansible_hostname }}.
+      delegate_to: 127.0.0.1
