--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -28,7 +28,7 @@
       register: reboot_required_file
       
     - name: Sending an e-mail if reboot needed
-      when: reboot_required_file.stat.exists == true
+      when: reboot_required_file.stat.exists == false
       mail:
         host: "{{ var_gmail_smtp_server }}"
         port: "{{ var_gmail_smtp_port }}"
