--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -53,7 +53,7 @@
 
     - name: Show debug messages
       debug:
-        msg: "{{ item }}"
+        msg: "XXX"
       with_items:
         - "{{ output1 }}"
 
