--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -53,7 +53,7 @@
 
     - name: Show debug messages
       debug:
-        when: "{{ item.stdout }}" and "{{ item.stderr }}"
+        when: "{{ item.stdout }}" is defined and "{{ item.stderr }}" is defined"
         msg: "{{ item.stdout }}\nError: {{ item.stderr }}"
       with_items:
         - "{{ output1 }}"
