--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -1,30 +1,13 @@
 ---
-- name: Update apt packages
+- name: Update apt packages and pihole
   hosts: servers
   become: true
-  tasks:
+  block:
     - name: Update apt packages
       apt: 
         upgrade: true
         update_cache: yes
       register: output1
-
-    - name: Update apt packages check
-      become: no
-      when: "{{ taskresults is failed }}"
-      mail:
-        host: "{{ var_gmail_smtp_server }}"
-        port: "{{ var_gmail_smtp_port }}"
-        username: "{{ var_gmail_sender }}"
-        password: "{{ var_gmail_password }}"
-        to: "{{ var_gmail_receiver }}"
-        subject: Update pihole check failed - Ansible 
-        body: Update pihole check failed in "{{ ansible_hostname }}".
-      delegate_to: 127.0.0.1
-
-    - name: Show debug messages
-      debug:
-        msg: "{{ output1 }}"
       
     - name: Update pihole
       when: inventory_hostname in groups['piholes']
@@ -39,6 +22,7 @@
     - name: Reboot if required
       when: reboot_required_file.stat.exists == true
       reboot:
+      register: output3
 
     - name: Sending an e-mail if rebooted
       become: no
@@ -52,7 +36,7 @@
         subject: Server Rebooted - Ansible 
         body: Rebooted system "{{ ansible_hostname }}".
       delegate_to: 127.0.0.1
-      register: output3
+      register: output4
       
     - name: Sending an e-mail if reboot needed
       become: no
@@ -64,15 +48,29 @@
         password: "{{ var_gmail_password }}"
         to: "{{ var_gmail_receiver }}"
         subject: Server Reboot requited - Ansible 
-        body: Reboot requied for system "{{ ansible_hostname }}".
+        body: Reboot requied for system "{{ inventory_hostname }}".
       delegate_to: 127.0.0.1
-      register: output4
-
-    # - name: Show debug messages
-    #   debug:
-    #     msg: "{{ item }}"
-    #   with_items:
-    #     - "{{ output1 }}"
-    #     - "{{ output2 }}"
-    #     - "{{ output3 }}"
-    #     - "{{ output4 }}"
+      register: output5      
+  rescue:
+    - name: Sending an e-mail if any task failed
+      become: no
+      mail:
+        host: "{{ var_gmail_smtp_server }}"
+        port: "{{ var_gmail_smtp_port }}"
+        username: "{{ var_gmail_sender }}"
+        password: "{{ var_gmail_password }}"
+        to: "{{ var_gmail_receiver }}"
+        subject: Ansible task failed 
+        body: Ansible task failed "{{ inventory_hostname }}" - "{{ ansible_failed_result }}".
+      delegate_to: 127.0.0.1
+      register: output5      
+  always:    
+    - name: Show debug messages
+      debug:
+        msg: "{{ item }}"
+      with_items:
+        - "{{ output1 }}"
+        - "{{ output2 }}"
+        - "{{ output3 }}"
+        - "{{ output4 }}"
+        - "{{ output5 }}"
