--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -66,7 +66,7 @@
           register: output5
       always:
         - name: Show debug messages
-          debug: null
+          debug:
             msg: "{{ item }}"
           with_items:
             - "{{ output1 }}"
