--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -20,7 +20,7 @@
           register: reboot_required_file
         - name: Reboot if required
           when: reboot_required_file.stat.exists == true
-          reboot: null
+          reboot:
           register: output3
         - name: Sending an e-mail if rebooted
           become: no
