--- a/apt-update-playbook.yaml
+++ b/apt-update-playbook.yaml
@@ -22,7 +22,7 @@
           register: reboot_required_file
           
         - name: Reboot if required
-          when: reboot_required_file.stat.exists == true
+          when: reboot_required_file.stat.exists == false
           reboot:
           register: output3
           
