--- a/apt-update-check-playbook.yaml
+++ b/apt-update-check-playbook.yaml
@@ -43,8 +43,8 @@
           debug:
             msg: "{{ item }}"
           with_items:
-            - "{{ output1 }}"
-            - "{{ output2 }}"
-            - "{{ output3 }}"
-            - "{{ output4 }}"
+            - "{{ output1 | default(omit) }}"
+            - "{{ output2 | default(omit) }}"
+            - "{{ output3 | default(omit) }}"
+            - "{{ output4 | default(omit) }}"
    
